company view fixed whitespace #56

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -34,63 +34,6 @@ a:hover{
   background-color: grey;
 }
 
-.homeNav a{
-  color: #7b9fad;
-  font-weight: bold;
-}
-
-.aboutUsNav a{
-  color: #85d077;
-  font-weight: bold;
-}
-.howItWrksNav a {
-  color:#c31c46;
-  font-weight: bold;
-}
-
-.registerNav a {
-  color: yellow;
-  font-weight: bold;
-
-}
-
-.contactNav a {
-  color: #7b9fad;
-  font-weight: bold;
-
-}
-.homeNav:hover{
-  border-bottom: 4px solid #7b9fad;
-  color: #7b9fad;
-  font-weight: bold;
-}
-
-.aboutUsNav:hover {
-  border-bottom: 4px solid #85d077;
-  color: #85d077;
-  font-weight: bold;
-
-}
-.howItWrksNav:hover {
-  border-bottom: 4px solid #c31c46;
-  color:#c31c46;
-  font-weight: bold;
-}
-
-.registerNav:hover {
-  border-bottom: 4px solid yellow;
-  color: yellow
-  font-weight: bold;
-
-}
-
-.contactNav:hover {
-  border-bottom: 4px solid #7b9fad;
-  color: #7b9fad;
-  font-weight: bold;
-
-}
-
 
 
 #navLogo {
